HBASE-19239 Fix findbugs and error-prone issues
Fixes for hbase-client